--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -10,7 +10,6 @@
 }
 .column * {
   margin: 7px;
-  background-color: rgb(54, 51, 52);
 }
 
 .column {
@@ -24,9 +23,11 @@
   margin-bottom: 0px;
   justify-content: center;
   align-items: center;
+  background-color: rgb(54, 51, 52);
 }
 
 .column-name * {
+  background-color: rgb(54, 51, 52);
   display: flex;
 }
 
@@ -45,8 +46,8 @@
 .task {
   /* background-color: #964f4cff; */
   margin: 7px;
-  border: 2px solid rgb(54, 51, 52);
-  border-color: whitesmoke;
+  border: 2px solid whitesmoke;
+
   /* border-radius: 1rem; */
   width: 30%;
   /* height: 15rem; */
@@ -106,16 +107,12 @@
   text-decoration: none;
   font-size: 12px;
   width: fit-content;
-  align-self: flex-end;
 }
 
 [name='add'] {
   display: flex;
   color: whitesmoke;
   font-size: 18px;
-  /* flex-direction: column; */
-  /* align-self:flex-end; */
-  /* text-align: right */
 }
 
 [name='description'] {
@@ -136,51 +133,44 @@
   flex-direction: column;
 }
 
-/* #567572FF */
-
-.dropbtn {
-  background-color: #3498db;
-  color: black;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+.btn-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover,
-.dropbtn:focus {
-  background-color: #2980b9;
+.btn-container * {
+  background-color: inherit;
+  margin: 3px;
 }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
   display: inline-block;
+  background-color: inherit;
+  width: fit-content;
+}
+.dropdown > * {
+  background-color: inherit;
+  margin: 0px;
 }
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
-  color: #130101;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  background-color: rgb(54, 51, 52);
+  width: fit-content;
+  border: 2px solid whitesmoke;
 }
 
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+[name='category-picker'] {
+  width: fit-content;
+  margin: 0px;
 }
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
+.picker-el > input {
+  width: 35px;
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
