--- a/public/src/form.css
+++ b/public/src/form.css
@@ -4,38 +4,43 @@
 
 .tab {
   overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
+  display: flex;
+  color: whitesmoke;
+  margin: 7px 7px 0px 7px;
+  border: 2px solid whitesmoke;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: rgb(54, 51, 52);
 }
 
 /* Style the buttons that are used to open the tab content */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-}
+
 .tab button.active {
-  background-color: #ccc;
+  background-color: rgb(70, 65, 67);
 }
 
 .tabcontent {
   display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
-}
-
-.container {
   background-color: rgb(54, 51, 52);
+  color: whitesmoke;
   margin: 7px;
   border: 2px solid whitesmoke;
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  align-content: flex-start;
+  margin-top: 0px;
+  border-top: 2px solid whitesmoke;
+}
+.tabcontent * {
+  background-color: inherit;
+  margin: 7px;
+}
+
+button {
+  background-color: #696667ff;
+  border: none;
+  color: whitesmoke;
+  outline: none;
+  cursor: pointer;
+  margin: 7px;
 }
